- Internal engine enhancements
  - Replace internal stack of data caches with a single data cache
  - Manage settings internally without exposing them as system properties
  - Implicits managed at lifecycle level
  - Improved scope boundaries
- Add settings(s):
  - `gwen.input.data.readOnly`
- Add implicit variable(s):
  - `gwen.process.name`
- Add environment variable(s)
  - `GWEN_PROCESS`
- Drop deprecated features:
  - Gwen Workspaces warning
  - `-p|--properties` option
  - Report portal integration
  - Matrix tables
  - Core DSL steps
    - `I wait <duration> second[s] when <element> is <actioned>`
    - `I wait until <condition> when <element> is <actioned>`
  - Core DSL steps in favour of base step with `@Timeout` and `@Delay` annotations
    - `<step> <until|while> <condition> using <delay> <delayUnit> delay`
    - `<step> <until|while> <condition> using <timeout> <timeoutUnit> timeout`
    - `<step> <until|while> <condition> using <delay> <delayUnit> delay and <timeout> <timeoutUnit> timeout`
    - `<step> <until|while> <condition> using no delay and <timeout> <timeoutUnit> timeout`
    - `<step> <until|while> <condition> using no delay`
    - `<step> <until|while> <condition> using no delay and <timeout> <timeoutUnit> timeout`
- Raise deprecations as errors by default instead of logged them as warnings
  | Setting                     | Old default | New default |
  | :-------------------------- | :---------: | :---------: |
  | `gwen.logLevel.deprecations`|   `warn`    |   `error`   |
- | Deprecated Settings          | Use this instead               |
  | :--------------------------- | :----------------------------- |
  | `gwen.cli.options.batch`     | `gwen.launch.options.batch`    |
  | `gwen.cli.options.format`    | `gwen.launch.options.format`   |
  | `gwen.cli.options.inputData` | `gwen.launch.options.inputData`|
  | `gwen.cli.options.dryRun`    | `gwen.launch.options.dryRun`   |
  | `gwen.cli.options.features`  | `gwen.launch.options.features` |